// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextElement adds line break before line ends 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  Hello
  <br />
  where are you
  <br />
  today?
  <br />
</p>
`;

exports[`TextElement element produces display: none output with show false 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-1yb50b0-MuiTypography-root"
  id="page1.para1"
>
  Hello
  where are you
</p>
`;

exports[`TextElement element produces normal output with show true 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  Hello
  where are you
</p>
`;

exports[`TextElement element produces output containing ReactElement children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-1is0exk-MuiTypography-root"
  id="page1.para1"
>
  Hello
  <p>
    where are you
  </p>
</p>
`;

exports[`TextElement element produces output containing string children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  Hello
  where are you
</p>
`;

exports[`TextElement element produces output containing string version of function children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  function Sum
</p>
`;

exports[`TextElement element produces output containing string version of object children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  {a: 10}
  {c: 'Hi'}
</p>
`;

exports[`TextElement element produces output containing toString of ErrorResult 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  Error: Bad function - It went wrong
</p>
`;

exports[`TextElement element produces output containing toString of class object 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  This is a MyClass
</p>
`;

exports[`TextElement element produces output containing undefined children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
/>
`;

exports[`TextElement element produces output containing valueOf object 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  where are you
</p>
`;

exports[`TextElement gets property values supplied as state objects 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-341k9t-MuiTypography-root"
  id="page1.para1"
>
  Hello
  <p>
    where are you
  </p>
</p>
`;
